// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 0,
    "driverId": "d3",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1252.94,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d5",
    "gap": 19.392,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1272.331,
    "tyre": "soft",
  },
  {
    "condition": 74,
    "driverId": "d4",
    "gap": 3.397,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.728,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d6",
    "gap": 3.108,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1278.836,
    "tyre": "soft",
  },
  {
    "condition": 80,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.616,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 83,
    "driverId": "d3",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1274.498,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d5",
    "gap": 0.886,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.384,
    "tyre": "soft",
  },
  {
    "condition": 0,
    "driverId": "d6",
    "gap": 2.893,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1278.277,
    "tyre": "soft",
  },
  {
    "condition": 75,
    "driverId": "d4",
    "gap": 0.102,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1278.379,
    "tyre": "medium",
  },
  {
    "condition": 80,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.616,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
